# disneybound_planner

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  fly.toml  justfile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
apps/ai/: apps.py
apps/characters/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/characters/migrations/: 0001_initial.py
apps/core/: tests.py  urls.py  views.py
apps/outfits/: apps.py  urls.py
apps/scraping/: apps.py
apps/trips/: apps.py  urls.py
baml/: main.baml
baml_src/: main.baml
config/: settings.py  urls.py
docs/: OVERVIEW.md
docs/active/enhancement_proposals/: EP-001-project-foundation.md  EP-002-character-search.md  EP-003-doppler-setup-wizard.md  EP-004-character-persistence.md  EP-005-production-hardening.md
docs/active/tickets/: T-001-init-django-uv.md  T-002-flyio-neon-deployment.md
docs/knowledge/: specification.md
docs/knowledge/patterns/: AGENT_PLAYBOOK.md  EP_TEMPLATE.md  TICKET_TEMPLATE.md
scripts/: setup.sh
static/css/: components.css  main.css
templates/: base.html
templates/characters/: detail.html  list.html
templates/characters/partials/: search_results.html
templates/layouts/: app.html  auth.html
templates/outfits/: create.html  detail.html  list.html
templates/pages/: home.html
templates/trips/: create.html  detail.html  list.html
theme/static_src/src/: styles.css
