[project]
name = "disneybound-planner"
version = "0.1.0"
description = "Plan Disney-inspired everyday outfits for theme park visits"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.217.0",
    "beautifulsoup4>=4.14.3",
    "cookiecutter>=2.6.0",
    "cryptography>=46.0.3",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "django-components>=0.144.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-tailwind>=4.4.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.13",
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
exclude = ["baml_client/", "migrations/", "theme/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "baml_client.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"
